feat: added conversations endpoint
