# docs/openapi.yaml
@@ -70,13 +70,9 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: 'User registered successfully'
-        '400':
-          description: Invalid request
+                $ref: '#/components/schemas/User'
+        '409':
+          description: User already exists
           content:
             application/json:
               schema:
@@ -111,6 +107,78 @@ paths:
                     $ref: '#/components/schemas/User'
         '401':
           description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /users/{user_id}:
+    get:
+      tags: [Users]
+      operationId: getUser
+      summary: Get a user by ID
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid user_id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /users/search:
+    get:
+      tags: [Users]
+      operationId: searchUsers
+      summary: Search for user by username
+      parameters:
+        - name: username
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: User not found
           content:
             application/json:
               schema:
@@ -165,6 +233,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /conversations/{conversation_id}:
     get:
       tags: [Conversations]
@@ -183,15 +257,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Conversation'
+        '400':
+          description: Invalid conversation_id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '401':
           description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-    patch:
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Conversation not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    put:
       tags: [Conversations]
-      operationId: addUsersToConversation
+      operationId: renameConversation
       summary: Rename a conversation by ID
       parameters:
         - name: conversation_id
@@ -221,6 +313,24 @@ paths:
                     example: 'Conversation renamed successfully'
         '400':
           description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Conversation not found
           content:
             application/json:
               schema:
@@ -258,10 +368,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Conversation not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /conversations/{conversation_id}/users:
     get:
-      tags: [Users]
+      tags:
+        - Conversations
+          Users
       operationId: getConversationUsers
       summary: Get all users in a conversation
       parameters:
@@ -286,7 +410,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
-      tags: [Users]
+      tags:
+        - Conversations
+          Users
       operationId: addUserToConversation
       summary: Add a user to a conversation
       parameters:
@@ -322,7 +448,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     delete:
-      tags: [Users]
+      tags:
+        - Conversations
+          Users
       operationId: removeUserFromConversation
       summary: Remove a user from a conversation
       parameters:
@@ -360,7 +488,9 @@ paths:
 
   /conversations/{conversation_id}/messages:
     get:
-      tags: [Messages]
+      tags:
+        - Conversations
+          Messages
       operationId: getMessages
       summary: Get all messages in a conversation
       parameters:
@@ -397,7 +527,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
-      tags: [Messages]
+      tags:
+        - Conversations
+          Messages
       operationId: sendMessage
       summary: Send a message to a conversation
       parameters:
@@ -434,6 +566,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /info:
+    get:
+      tags: [Info]
+      operationId: getInfo
+      summary: Get API information
+      security: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Info'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   securitySchemes:
@@ -444,35 +595,57 @@ components:
   schemas:
     Token:
       type: object
+      required:
+        - token
+        - expires
       properties:
         token:
+          description: 'The JWT token'
           type: string
         expires:
+          description: 'The token expiry date'
           type: string
     Error:
       type: object
+      required:
+        - status
+        - message
       properties:
         status:
+          description: 'HTTP status code'
           type: integer
           example: 400
         message:
+          description: 'Error message'
           type: string
+          example: 'Bad request'
         errors:
+          description: 'Validation errors'
           type: array
           items:
             type: object
             properties:
               field:
+                description: 'The field that caused the error'
                 type: string
               message:
+                description: 'The error message for the field'
                 type: string
+
     User:
       type: object
+      required:
+        - id
+        - username
       properties:
         id:
+          description: 'The user ID'
           type: number
+          example: 1
         username:
+          description: 'The user username'
           type: string
+          example: 'alice'
     Conversation:
       type: object
       properties:
@@ -492,4 +665,28 @@ components:
         user_name:
           type: string
         created_at:
+          type: string
+    Info:
+      type: object
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        version:
+          type: string
+        license:
+          type: object
+          properties:
+            name:
+              type: string
+            url:
+              type: string
+        num_users:
+          type: number
+        num_conversations:
+          type: number
+        num_messages:
+          type: number
+        last_message_at:
           type: string
