# src/routes/auth/data.ts
@@ -1,8 +1,0 @@
-export const links = [
-  { href: '/', text: 'Home' },
-  { href: 'signup', text: 'Sign up' },
-  { href: 'login', text: 'Log in' },
-  { href: 'logout', text: 'Logout' },
-  { href: 'messages', text: 'Messages' },
-  { href: 'about', text: 'About' },
-];
